# GPUJPEG

./: .clang-format  .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  Config.cmake.in  Doxyfile  FAQ.md  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.bkp  NEWS  NEWS.md  README  README.md  ZLUDA.md  autogen.sh  common.mk  configure.ac  gpujpeg.sln  gpujpeg.vcxproj  jpeg_common.c  jpeg_common.h  jpeg_decoder.c  jpeg_decoder.h  jpeg_encoder.c  jpeg_encoder.h  jpeg_huffman_coder.c  jpeg_huffman_coder.h  jpeg_huffman_cpu_decoder.c  jpeg_huffman_cpu_encoder.c  jpeg_huffman_decoder.c  jpeg_huffman_decoder.h  jpeg_huffman_encoder.c  (+20 more)
.github/scripts/: delete-asset.sh  upload-asset.sh
.github/workflows/: ccpp.yml
cmake/: FindGLEW.cmake  FindGLFW.cmake  FindGLUT.cmake
colors/: display_diff.sh  run_tests.sh  test.yuv  test_common.sh  test_rgb.sh  test_yuv.sh
examples/: CMakeLists.txt  README.md  decode_minimal.c  decode_to_cuda_pnm.c  decode_to_file.c  decode_to_pnm.c  decode_to_raw_rgb.c  encode.c  encode_file.c  encode_minimal.c  encode_pnm.c  encode_raw.c  encode_raw_rgb.c
gpujpeg/: Makefile  gpujpeg_common.h  gpujpeg_decoder.c  gpujpeg_decoder.h  gpujpeg_encoder.c  gpujpeg_format_type.h  gpujpeg_huffman_gpu_decoder.cu  gpujpeg_huffman_gpu_encoder.cu  gpujpeg_preprocessor.cu  gpujpeg_table.c  gpujpeg_type.h  gpujpeg_util.h  gpujpeg_writer.c  gpujpeg_writer.h
libgpujpeg/: Makefile  gpujpeg.h  gpujpeg_colorspace.h  gpujpeg_common.c  gpujpeg_common.h  gpujpeg_common_internal.h  gpujpeg_dct.c  gpujpeg_dct.h  gpujpeg_dct_gpu.cu  gpujpeg_dct_gpu_float.cu  gpujpeg_dct_gpu_float.h  gpujpeg_dct_gpu_int.cu  gpujpeg_dct_gpu_int.h  gpujpeg_decoder.c  gpujpeg_decoder.h  gpujpeg_decoder_internal.h  gpujpeg_encoder.c  gpujpeg_encoder.h  gpujpeg_encoder_internal.h  gpujpeg_huffman_cpu_decoder.c  gpujpeg_huffman_cpu_decoder.h  gpujpeg_huffman_cpu_encoder.c  gpujpeg_huffman_cpu_encoder.h  gpujpeg_huffman_gpu_decoder.cu  gpujpeg_huffman_gpu_encoder.cu  gpujpeg_huffman_gpu_encoder.h  gpujpeg_preprocessor.cu  gpujpeg_preprocessor.h  gpujpeg_reader.c  gpujpeg_reader.h  gpujpeg_table.c  gpujpeg_table.h  gpujpeg_type.h  gpujpeg_util.h  gpujpeg_version.h  gpujpeg_version.h.cmakein  gpujpeg_version.h.in  gpujpeg_writer.c  gpujpeg_writer.h
package_specs/: _service.tpl  debian-patches-Ubuntu_1604.series  debian-patches-clang.series  debian.changelog  debian.control  debian.rules  gpujpeg-Debian_90.dsc  gpujpeg-Ubuntu_1604.dsc  gpujpeg.dsc  libgpujpeg-rpmlintrc  libgpujpeg.spec  ubuntu-1604-nvcc-compat.patch
specs/: _service.tpl  debian.changelog  debian.control  debian.rules  gpujpeg-Debian_90.dsc  gpujpeg-Ubuntu_1604.dsc  gpujpeg.dsc  host-compiler-clang.patch  libgpujpeg.spec  ubuntu-1604-nvcc-compat.patch
src/: gpujpeg_colorspace.h  gpujpeg_common.c  gpujpeg_common.cpp  gpujpeg_common_internal.h  gpujpeg_dct_cpu.c  gpujpeg_dct_cpu.h  gpujpeg_dct_gpu.cu  gpujpeg_dct_gpu.h  gpujpeg_decoder.c  gpujpeg_decoder.cpp  gpujpeg_decoder_internal.h  gpujpeg_encoder.c  gpujpeg_encoder.cpp  gpujpeg_encoder_internal.h  gpujpeg_exif.c  gpujpeg_exif.h  gpujpeg_huffman_cpu_decoder.c  gpujpeg_huffman_cpu_decoder.cpp  gpujpeg_huffman_cpu_decoder.h  gpujpeg_huffman_cpu_encoder.c  gpujpeg_huffman_cpu_encoder.h  gpujpeg_huffman_gpu_decoder.cu  gpujpeg_huffman_gpu_decoder.h  gpujpeg_huffman_gpu_encoder.cu  gpujpeg_huffman_gpu_encoder.h  gpujpeg_marker.h  gpujpeg_postprocessor.cu  gpujpeg_postprocessor.h  gpujpeg_preprocessor.cu  gpujpeg_preprocessor.h  gpujpeg_preprocessor_common.cuh  gpujpeg_preprocessor_common.h  gpujpeg_qm_cpu_encoder.cpp  gpujpeg_qm_cpu_encoder.h  gpujpeg_qm_gpu_encoder.cu  gpujpeg_qm_gpu_encoder.h  gpujpeg_reader.c  gpujpeg_reader.cpp  gpujpeg_reader.h  gpujpeg_table.c  (+7 more)
src/compat/: time.h
src/utils/: fpnge.h  getopt.c  getopt.h  image_delegate.c  image_delegate.cpp  image_delegate.h  image_delegate_fpnge.cpp  image_delegate_fpnge.h  image_delegate_pnm.cpp  image_delegate_pnm.hpp  pam.c  pam.h  pam.hpp  pnm.hpp  stb_image.h  y4m.h
test/: common.sh
test/decoder_gltex/: gpujpeg_reformat.c  gpujpeg_reformat.cpp  gpujpeg_reformat.h  main.c
test/memcheck/: Makefile.am  Makefile.bkp
test/misc/: README.md  mt_encode.c
test/opengl_interop/: Makefile  main.c  util.h  view.c  view.h
test/regression/: README.md  run_tests.sh
test/unit/: Makefile  run_tests.c  test_gh_95.c
